fix: do not round code blocks on small screens

--- a/themes/paprika/assets/app.css
+++ b/themes/paprika/assets/app.css
@@ -597,14 +597,14 @@ nav[data-post] {
   .highlight,
   pre {
     margin: 0 0 3rem;
+    border-radius: 0.5rem;
     
     @media screen and (width <= 600px) {
-    margin: 0 calc(var(--gap) * -1) 4rem;
-      
+      margin: 0 calc(var(--gap) * -1) 4rem;
+      border-radius: 0;
     }
     overflow-x: auto;
     background: var(--code-bg) !important;
-    border-radius: 0.5rem;
   }
 
   ul pre {
